works and also git plugins repo 2